--- a/functions/Bonus/assets/css/style.css
+++ b/functions/Bonus/assets/css/style.css
@@ -17,30 +17,29 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    transform: rotate(135deg);
 }
 
 .btn:hover {
-    box-shadow: 0 0 10px rgb(0, 0, 0);
+    box-shadow: 0 3px 10px rgb(0, 0, 0);
     transition: 0.3s;
 }
 
 .btn1 {
     border: 1px solid #000000;
-    background-image: conic-gradient(#0da2de 180deg, #fff 180deg);
+    background-image: linear-gradient(to top right, #0da2de 50%, #fff 50%);
 }
 
 .btn2 {
     border: 1px solid #000000;
-    background-image: conic-gradient(#f20808 180deg, #000000 180deg);
+    background-image: linear-gradient(to top right, #f20808 50%, #000000 50%);
 }
 
 .btn3 {
     border: 1px solid #ffffff;
-    background-image: conic-gradient(#e121ff 180deg, #011c93 180deg);
+    background-image: linear-gradient(to top right, #e121ff 50%, #011c93 50%);
 }
 
 .btn4 {
     border: 1px solid #ffffff;
-    background-image: conic-gradient(#38ad54 180deg, #fff 180deg);
+    background-image: linear-gradient(to top right, #38ad54 50%, #fff 50%);
 }
